# OliloStatus

./: .gitignore  README.md
Backend/src/services/: poller.js
Olilo Status/Backend/: .dockerignore  .env.example  .gitignore  CLIENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
Olilo Status/Backend/proxy/: README.md  cloudflare-ips.conf  default.conf.template
Olilo Status/Backend/src/: cli.js  config.js
Olilo Status/Olilo Status/Olilo/: OliloWebView.swift
Olilo Status/Olilo Status/Olilo Status/: StatusView.swift
Olilo Status/Olilo Status/Settings/: SettingsView.swift
Olilo Status/iOS/Olilo Status Widget/: OliloStatusWidget.swift
Olilo Status/iOS/Olilo Status.xcodeproj/: project.pbxproj
Olilo Status/iOS/Olilo Status/Notifications/: OliloNotifications.swift
Olilo Status/iOS/Olilo Status/Olilo Status/: NoticesView.swift  StatusView.swift
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  olilo_iperf_jni.c
iOS/Olilo Status.xcodeproj/: project.pbxproj
iOS/Olilo Status/App/: ContentView.swift
iOS/Olilo Status/Contributors/: CreditsView.swift
iOS/Olilo Status/Notifications/: NotificationSettingsView.swift  OliloNotifications.swift
iOS/Olilo Status/Olilo/: OliloWebView.swift
iOS/Olilo Status/Olilo Status/: NoticesView.swift  StatusHistoryView.swift  StatusView.swift
iOS/Olilo Status/Onboarding/: OnboardingView.swift
iOS/Olilo Status/Settings/: AppearanceSettingsView.swift  SettingsView.swift
iOS/Olilo Status/Speedtest/: SpeedtestView.swift
iOS/Olilo Status/Support/: ContactUsView.swift
(+26 files in other folders)
